--- a/index.html
+++ b/index.html
@@ -43,252 +43,238 @@
   </section>
 
   <!--Sobre/ About-->
-  <section class="about"  id="about">
+  <section class="about" id="about">
     <h1 class="heading"><span>Sobre </span>nós</h1>
     <div class="row">
-    <div class="image">
-      <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
-    </div>
+      <div class="image">
+        <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
+      </div>
 
-    <div class="content">
-      <h3>O que torna a PizzaHass única?</h3>
-      <p>
-        Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
-        memoráveis. Fundada com a paixão por comida de qualidade e um
-        compromisso com a excelência, nossa pizzaria combina tradição e
-        inovação para oferecer o melhor em cada fatia.
-      </p>
-      <p>
-        Nossos ingredientes são cuidadosamente selecionados para garantir a
-        satisfação para garantir frescor e sabor. Usamos técnicas de preparo
-        artesanais para criar massas incrivelmente leves e crocantes e nossos
-        molhos são feitos a partir de tomates e especiarias únicas.
-      </p>
-      <a href="#" class="btn">Saiba mias</a>
-    </div>
+      <div class="content">
+        <h3>O que torna a PizzaHass única?</h3>
+        <p>
+          Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
+          memoráveis. Fundada com a paixão por comida de qualidade e um
+          compromisso com a excelência, nossa pizzaria combina tradição e
+          inovação para oferecer o melhor em cada fatia.
+        </p>
+        <p>
+          Nossos ingredientes são cuidadosamente selecionados para garantir a
+          satisfação para garantir frescor e sabor. Usamos técnicas de preparo
+          artesanais para criar massas incrivelmente leves e crocantes e nossos
+          molhos são feitos a partir de tomates e especiarias únicas.
+        </p>
+        <a href="#" class="btn">Saiba mias</a>
+      </div>
     </div>
   </section>
 
-   <!-- MENU -->
-    <section class="menu" id="menu">
-      <h1 class="heading">Nosso <span>menu</span> </h1>
+  <!-- MENU -->
+  <section class="menu" id="menu">
+    <h1 class="heading">Nosso <span>menu</span> </h1>
 
-      <div class="box-container">
-        <div class="box">
-          <img src="images/pizza_item_1.jpg" alt="Explosão de Pepperoni">
-          <h3>Explosão de Pepperoni</h3>
-          <div class="price"> R$55.99 <span>60.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais">
-          <h3>Aventuras Vegetais</h3>
-          <div class="price"> R$45.99 <span>60.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delícia">
-          <h3>Mediterrânea Delícia</h3>
-          <div class="price"> R$75.99 <span>80.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo">
-          <h3>Pomodoro do Campo</h3>
-          <div class="price"> R$45.99 <span>50.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida">
-          <h3>Lusitana Colorida</h3>
-          <div v> R$55.99 <span>60.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_6.jpg" alt="Saborosa Lava">
-          <h3>Saborosa Lava</h3>
-          <div class="price"> R$85.99 <span>100.99</span></div>
-          <a href="#" class="btn">Adicionar ao carrinho</a>
-        </div>
+    <div class="box-container">
+      <div class="box">
+        <img src="images/pizza_item_1.jpg" alt="Explosão de Pepperoni">
+        <h3>Explosão de Pepperoni</h3>
+        <div class="price"> R$55.99 <span>60.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
-    </section>
+
+      <div class="box">
+        <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais">
+        <h3>Aventuras Vegetais</h3>
+        <div class="price"> R$45.99 <span>60.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
+      </div>
+
+      <div class="box">
+        <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delícia">
+        <h3>Mediterrânea Delícia</h3>
+        <div class="price"> R$75.99 <span>80.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
+      </div>
+
+      <div class="box">
+        <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo">
+        <h3>Pomodoro do Campo</h3>
+        <div class="price"> R$45.99 <span>50.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
+      </div>
+
+      <div class="box">
+        <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida">
+        <h3>Lusitana Colorida</h3>
+        <div v> R$55.99 <span>60.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
+      </div>
+
+      <div class="box">
+        <img src="images/pizza_item_6.jpg" alt="Saborosa Lava">
+        <h3>Saborosa Lava</h3>
+        <div class="price"> R$85.99 <span>100.99</span></div>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
+      </div>
+    </div>
+  </section>
 
 
   <!--Products / Promoções-->
-  <section id="Products">
-    <h1 class="heading"><span>Combos e </span>Promoções</h1>
+  <!-- PRODUCTS / PROMOÇÕES -->
+  <section class="products" id="products">
+    <h1 class="heading">Combos e <span>promoções</span> </h1>
     <div class="box-container">
       <div class="box">
-        <div>
+        <div class="icons">
           <a href="#menu"><ion-icon name="cart"></ion-icon></a>
           <a href="#"><ion-icon name="heart"></ion-icon></a>
           <a href="#"><ion-icon name="eye"></ion-icon></a>
         </div>
-        <div>
-          <img src="images/promo_1.jpg" alt="Pizza com coca-cola" />
+
+        <div class="image">
+          <img src="images/promo_1.jpg" alt="Pizza com coca-cola">
         </div>
-        <div>
+
+        <div class="content">
           <h3>Pizza + Refrigerante 2L</h3>
-          <div>
+          <div class="stars">
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
           </div>
+          <div class="price">R$65.00 <span>a partir</span></div>
         </div>
-        <div>R$65.00 <span>a partir</span></div>
+
       </div>
 
       <div class="box">
-        <div>
-          <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+        <div class="icons">
+          <a href="#menu"> <ion-icon name="cart"></ion-icon></a>
           <a href="#"><ion-icon name="heart"></ion-icon></a>
           <a href="#"><ion-icon name="eye"></ion-icon></a>
         </div>
-        <div>
-          <img src="images/promo_2.jpg" alt="Pizza com lata de pepsi" />
+
+        <div class="image">
+          <img src="images/promo_2.jpg" alt="Pizza com lata de pepsi">
         </div>
-        <div>
+
+        <div class="content">
           <h3>Pizza + Refrigerante 350ml</h3>
-          <div>
+          <div class="stars">
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
           </div>
+          <div class="price">R$50.00 <span>a partir</span></div>
         </div>
-        <div>R$50.00 <span>a partir</span></div>
+
       </div>
+
       <div class="box">
-        <div>
-          <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+        <div class="icons">
+          <a href="#menu"> <ion-icon name="cart"></ion-icon></a>
           <a href="#"><ion-icon name="heart"></ion-icon></a>
           <a href="#"><ion-icon name="eye"></ion-icon></a>
         </div>
-        <div>
-          <img src="images/promo_3.jpg" alt="Pizza com coca-cola" />
+
+        <div class="image">
+          <img src="images/promo_3.jpg" alt="Pizza com coca-cola">
         </div>
-        <div>
+
+        <div class="content">
           <h3>Pizza + Refrigerante 600ml</h3>
-          <div>
+          <div class="stars">
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
             <i><ion-icon name="star"></ion-icon></i>
-            <ion-icon name="star-half"></ion-icon>
+            <i><ion-icon name="star-half"></ion-icon></i>
           </div>
+          <div class="price">R$55.00 <span>a partir</span></div>
         </div>
-        <div>R$55.00 <span>a partir</span></div>
+
       </div>
     </div>
+
   </section>
 
-  <!--Review /Avaliações-->
-  <section id="review">
-    <h1 class="heading"><span>O que nossos </span> clientes dizem</h1>
+
+  <!-- REVIEW / AVALIAÇÕES -->
+  <section class="review" id="review">
+    <h1 class="heading">O que nossos <span>clientes dizem</span></h1>
 
     <div class="box-container">
       <div class="box">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
-          deleniti totam, necessitatibus aliquam porro laudantium minima
-          inventore repellat commodi saepe tempora consequuntur sit vel!
-          Accusamus quis veniam harum non aspernatur?
-          <img src="images/cliente_1.jpg" alt="Foto de um rapaz">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis?
+          Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+        <img class="user" src="images/cliente_1.jpg" alt="Foto de um rapaz">
         <h3>Alon Pinheiro</h3>
-        <div>
+        <div class="stars">
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star-half"></ion-icon></i>
         </div>
-        </p>
       </div>
 
       <div class="box">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
-          deleniti totam, necessitatibus aliquam porro laudantium minima
-          inventore repellat commodi saepe tempora consequuntur sit vel!
-          Accusamus quis veniam harum non aspernatur?
-          <img src="images/cliente_2.jpg" alt="Foto de um rapaz">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis?
+          Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+        <img class="user" src="images/cliente_2.jpg" alt="Foto de um rapaz">
         <h3>João Lira</h3>
-        <div>
+        <div class="stars">
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
-
-
         </div>
-        </p>
       </div>
 
       <div class="box">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
-          deleniti totam, necessitatibus aliquam porro laudantium minima
-          inventore repellat commodi saepe tempora consequuntur sit vel!
-          Accusamus quis veniam harum non aspernatur?
-          <img src="images/cliente_3.jpg" alt="Foto de um rapaz">
-        <h3>daniel Porto</h3>
-        <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis?
+          Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
+        <img class="user" src="images/cliente_3.jpg" alt="Foto de um rapaz">
+        <h3>Daniel Porto</h3>
+        <div class="stars">
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star"></ion-icon></i>
           <i><ion-icon name="star-half"></ion-icon></i>
         </div>
-        </p>
       </div>
+
     </div>
   </section>
 
-  <!--Footer / Rodapé-->
-  <footer class=" footer">
+  <!-- FOOTER / RODAPÉ -->
+  <footer class="footer">
     <div class="container">
       <div class="footer-col">
-        <h4 class="heading-footer">Pizza <span>Hash</span></h4>
+        <h4 class="heading-footer">Pizza<span>Hash</span></h4>
         <ul>
-          <li>
-            <a href="#about">Sobre nós</a>
-          </li>
-          <li>
-            <a href="#menu">
-              <Menu /a>
-          </li>
-          <li>
-            <a href="#">Politica de Privacidade</a>
-          </li>
-          <li>
-            <a href="#">Termos de Serviço</a>
-          </li>
+          <li><a href="#about">Sobre nós</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#">Política de Privacidade</a></li>
+          <li><a href="#">Termos de Serviços</a></li>
         </ul>
       </div>
 
       <div class="footer-col">
         <h4 class="heading-footer">Obtenha <span>Ajuda</span></h4>
         <ul>
-          <li>
-            <a href="#">Faq</a>
-          </li>
-          <li>
-            <a href="#">Devolições<Menu /a>
-          </li>
-          <li>
-            <a href="#">Opções de Pagamento</a>
-          </li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Devoluções</a></li>
+          <li><a href="#">Opções de Pagamentos</a></li>
         </ul>
       </div>
+
       <div class="footer-col">
-        <h4 class="reading-footer">Siga <span>-nos</span></h4>
+        <h4 class="heading-footer">Siga <span>-nos</span></h4>
         <div class="social-links">
           <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
           <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
@@ -296,8 +282,8 @@
           <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
       </div>
-
     </div>
+
     <div class="footer-bottom">
       <p>&copy; 2024 PizzaHash. Todos os direitos reservados.</p>
     </div>
